Cart has red number, but not js. CSS spacing problems need fixing

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
-/* This stylesheet generated by Transfonter (https://transfonter.org) on January 12, 2018 7:53 PM */
 
-/* check that Font Faces are working properly before submitting */
+/* to do:
+  1. give font families backups
+  2. add js to cart icon
+  3. validate code
 
-/* questions :
+*/
 
 
 
@@ -54,7 +56,7 @@
     font-family: 'raleway';
     color: white;
     font-size: 1.3rem;
-    font-weight: light;
+    font-weight: lighter;
     max-width: 100%;
   }
 
@@ -100,6 +102,11 @@
     box-sizing: border-box;
   }
 
+  .social-list{
+    font-family: 'Raleway';
+    font-weight: 300;
+  }
+
   
 
   body{
@@ -138,7 +145,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
+    align-content: center;
   }
 
   .nav-item{
@@ -153,21 +161,28 @@
     align-items: center;
   }
 
-  .logo img{
-    width: 80%;
-    max-height: 90%
+  .logo-img{
+    width: 100px;
+    height: 50px;
+    max-height: 90%;
+    background: url(../images/aloha-logo.svg);
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    right: 15%;
   }
 
   .menu{
-    flex-basis: 100%;
+    flex-basis: 90%;
     order: 3;
     height: 45%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: auto 100px;
     border-top: #d7d7d7 solid 1px;
+    margin: 0 auto;
   }
 
   .menu ul{
@@ -187,10 +202,29 @@
     align-items: center;
   }
 
-  .cart img{
-    max-height: 3em;
+  .cart-img{
+    height: 50px;
+    width: 50px;
+    max-height: 95%;
     position: relative;
+    background: url(../images/cart-icon.svg);
+    background-size: contain;
     left: 25%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .cart-number{
+    display: inline-block;
+    background: #e2574c;
+    color: white;
+    font-family: 'Raleway';
+    width: 15px;
+    height: 15px;
+    font-weight: 800;
+    font-size: 0.6rem;
+    border-radius: 50%;
+    text-align: center;
   }
 
   .hero-banner{
@@ -496,9 +530,10 @@
     height: 2.5em;
     padding: 0 2em;
     position: absolute;
-    top: 2.11rem;
+    top: 2.08rem;
     right: 0.2rem;
     font-size: 0.85em;
+    border: none;
   }
 
   input::placeholder{
@@ -550,14 +585,23 @@
 
 /* media queries */
   @media all and (min-width: 600px){
+    /* main containers */
+      .section-head{
+        width: 100%;
+        padding: 0 15%;
+      }
     /* font style changes for tab and desk */
+    h1{
+      font-size: 2.3rem;
+    }
+
     h3 span{
       font-size: 4rem;
     }
     /* header changes for Tab and Desk */
     header{
-      height: 80px;
-      margin-top: -100px;
+      height: 70px;
+      margin-top: -70px;
     }
     nav{
       flex-basis: 14%;
@@ -576,13 +620,20 @@
 
     .logo img{
       width: 70%;
+      max-width: 100px;
     }
     
     .menu{
       flex-basis: 49%;
       order: 2;
+      border-top:none;
+      justify-content: center;
     }
-    
+
+    .menu li{
+      padding: 0 20px;
+    }
+
     .cart{
       flex-basis: 25%;
       order: 3;
@@ -592,7 +643,7 @@
       left: 0%;
     }
     .hero-banner{
-      margin-top: 100px;
+      margin-top: 70px;
 
     }
 
@@ -607,6 +658,30 @@
     
     .mens, .womens{
       flex-basis: 50%;
+    }
+
+    .mens{
+      border-right: 0.2em solid white;
+    }
+  
+    .trends{
+      border-left: 0.2em solid white;
+    }
+  
+    .glasses{
+
+    }
+  
+    .sale{
+
+    }
+  
+    .bags{
+      border-right: 0.2em solid white;
+    }
+  
+    .womens{
+      border-left: 0.2em solid white;
     }
 
     /* product changes for tab and desk */
@@ -624,11 +699,20 @@
       max-height: 50%;
     }
 
+    .carousel-cell {
+      width: 50%; 
+    }
+
 
     
     /* updates section changes for tab and desk */
-    input{
-      width: 75%;
+    .email-form{
+      width: 400px;
+    }
+  
+    .email-button{
+      top: 2.08rem;
+      right: 0.1rem;
     }
 
     /* footer section changes for tab and desk */
@@ -639,6 +723,7 @@
     }
 
     .footer-text{
+      flex-basis: 30%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -650,7 +735,7 @@
     }
 
     .social-box{
-      flex-basis: 25%;
+      flex-basis: 30%;
       display: flex;
       align-content: center;
       justify-content: flex-end;
@@ -697,8 +782,24 @@
       flex-basis: 25%;
     }
 
+    .carousel-cell {
+      width: 25%; 
+    }
+
     /* updates section changes for desk */
+    .updates{
+      background-size: cover;
+    }
     input{
       width: 50%;
+    }
+
+    /* updates for footer */
+    .footer-text{
+      padding-left: 100px;
+    }
+
+    .social-box{
+      padding-right: 100px;
     }
   }
